ES-Add Logs and remove unecessary files
added logic for status transition to prevent wrong status transition
